--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,25 @@
-body { padding: 2em; }
+body { 
+padding: 2em; 
+font-family: 'Roboto', sans-serif;
+background-color: rgb(255, 251, 246);
+}
+
+
+
+h1 {
+font-size: 5em;
+color: rgb(51, 51, 51);
+}
+
+h2 {
+  font-size: 3em;
+  color: rgb(140, 140, 140);
+}
+
+h3 {
+color: rgb(203, 203, 203);
+font-style: italic;
+}
 
 a { color: blue; }
 em { font-style: italic; }
@@ -12,7 +33,16 @@ figure {
 	gap: 1em;
 }
 
-
+.image-block img {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 200px;
+  border-radius: 15px;
+  border: 0.15em;
+  border-style: solid;
+  border-color: rgb(140, 140, 140);
+}
 
 ul {
   --columns: 1;
