--- a/assets/style.css
+++ b/assets/style.css
@@ -2,22 +2,42 @@ body {
 padding: 2em; 
 font-family: 'Roboto', sans-serif;
 background-color: rgb(255, 251, 246);
+
+
+	background: linear-gradient(-45deg, #5b5b5b, #4a4a4a, rgb(0, 0, 0), #3a3a3a);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	
+}
 }
 
 
 
 h1 {
-font-size: 3em;
-color: rgb(51, 51, 51);
+font-size: 1em;
+color: rgb(255, 255, 255);
 }
 
 h2 {
   font-size: 1em;
-  color: rgb(140, 140, 140);
+  color: rgb(224, 224, 224);
+  font-weight: 100;
 }
 
 h3 {
-color: rgb(203, 203, 203);
+color: rgb(146, 146, 146);
 font-style: italic;
 }
 
@@ -41,12 +61,33 @@ figure {
   border-radius: 15px;
   border: 0.1em;
   border-style: solid;
-  border-color: rgb(140, 140, 140);
+  border-color: rgb(225, 225, 225);
   
 }
  
+
+
 li {
   min-width: 50%;
+}
+
+
+textarea {
+  resize: none;
+}
+
+#notesarea{
+  border: solid;
+  border-width: 0.5vw;
+  border: #d6d6d6;
+  border-radius: 0.1em;
+}
+
+#notes{
+  color: rgb(146, 146, 146);
+  border: 0.1em;
+  border-color: #d6d6d6;
+  \
 }
 
 #collection {
@@ -59,6 +100,7 @@ ul {
   display: flex;
   flex-wrap: nowrap;
   overflow: auto;
+
   /* display: grid;
   grid-template-columns: repeat(var(--columns), 1fr); */
 }
@@ -68,20 +110,21 @@ ul {
 
 
 @media (min-width: 600px) {
-  li {min-width: 20%;}
+  li {min-width: 40%;}
+  
+  .image-block img{
+    height: 400px;
+  }
 }
 
 h1 {
   font-size: 5em;
-  color: rgb(51, 51, 51);
   }
   
   h2 {
     font-size: 3em;
-    color: rgb(140, 140, 140);
   }
   
   h3 {
-  color: rgb(203, 203, 203);
   font-style: italic;
   }
