--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 body { 
 padding: 2em; 
 font-family: 'Roboto', sans-serif;
+font-weight: 200;
 background-color: rgb(255, 251, 246);
 
 
@@ -31,7 +32,7 @@ color: rgb(255, 255, 255);
 }
 
 h2 {
-  font-size: 1em;
+  font-size: 0.25em;
   color: rgb(224, 224, 224);
   font-weight: 100;
 }
@@ -59,12 +60,37 @@ figure {
   width: 100%;
   height: 200px;
   border-radius: 15px;
-  border: 0.1em;
+  border: 0.0em;
   border-style: solid;
   border-color: rgb(225, 225, 225);
   
 }
  
+
+
+*{padding:0;margin:0;}
+
+body{
+	font-family:Verdana, Geneva, sans-serif;
+	font-size:18px;
+	background-color:#CCC;
+}
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:rgb(255, 208, 0);
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+}
+
+.my-float{
+	margin-top:22px;
+}
 
 
 li {
@@ -87,7 +113,7 @@ textarea {
   color: rgb(146, 146, 146);
   border: 0.1em;
   border-color: #d6d6d6;
-  \
+  
 }
 
 #collection {
@@ -104,6 +130,16 @@ ul {
   /* display: grid;
   grid-template-columns: repeat(var(--columns), 1fr); */
 }
+
+
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 40% 30% 30%;
+}
+
+
+
 
 
 
