--- a/assets/style.css
+++ b/assets/style.css
@@ -80,8 +80,8 @@ body{
 	position:fixed;
 	width:60px;
 	height:60px;
-	bottom:40px;
-	right:40px;
+	bottom:30px;
+	right:60px;
 	background-color:rgb(255, 208, 0);
 	color:#FFF;
 	border-radius:50px;
@@ -89,7 +89,8 @@ body{
 }
 
 .my-float{
-	margin-top:22px;
+  width: 50px ;
+  height: 50px;
 }
 
 
